methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:8: error: type mismatch;
 found   : Unit
 required: Boolean
        return sawBaggle= true
                        ^MethodsReturning:16: error: not found: value seenBaggle
        return seenBaggle = true
               ^MethodsReturning:15: error: type mismatch;
 found   : Unit
 required: Boolean
      if (sawBaggle){
      ^